Simplify and correct message metadata alignment
Match left/right adjustment on Android.
Incoming to the left, outgoing to the right.

--- a/stylesheets/_ios.scss
+++ b/stylesheets/_ios.scss
@@ -146,12 +146,6 @@ $ios-border-color: rgba(0,0,0,0.1);
       }
       float: right;
     }
-    .timestamp {
-      float: none;
-    }
-    .status {
-      float: right;
-    }
   }
   .attachment {
     a {
